Revision history for Mojolicious::Plugin::ToolkitRenderer

{{$NEXT}}

1.10      2021-01-10 14:34:03-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.09      2020-05-18 15:08:25-07:00 America/Los_Angeles
        - Update Travis YAML
        - Update module code style
        - Simpler handling of TT errors in Mojo

1.08      2018-06-22 16:34:14-07:00 America/Los_Angeles
        - Adding Perl versions to test; annual general update for 2018
        - Fixing/improving how errors get rendered

1.07      2015-11-30 12:52:05-08:00 America/Los_Angeles
        - Add "content" keyword into stash as default controller->content

1.06      2015-04-20 14:26:58-07:00 America/Los_Angeles
        - Switch render_exception to reply->exception (Mojo deprecated old sub)

1.05      2015-01-29 15:30:18-08:00 America/Los_Angeles
        - Fix for documentation bug (wrong URLs)

1.04      2015-01-29 15:25:45-08:00 America/Los_Angeles
        - Implementing use of Dist::Zilla

1.02      Wed Sep 25 10:00:58 PDT 2014
        - Some OCD cleanup; addition of Travis and Coveralls

1.01      Mon Aug  5 12:47:03 PDT 2013
        - First version, released on an unsuspecting world