@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::ToolkitRenderer
 
 {{$NEXT}}
+        - Require Template with warnings dumped instead of use
 
 1.10      2021-01-10 14:34:03-08:00 America/Los_Angeles
         - Migrate to Test2::V0
